--- a/02 - JS and CSS Clock/index-CLASSWORKINGS.html
+++ b/02 - JS and CSS Clock/index-CLASSWORKINGS.html
@@ -62,12 +62,44 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%; /*Default setting = 50% => rotation would occur at middle of hand rather than middle of clock. 100% = RHS of second hand etc.*/
+      transform: rotate(90deg); /*Starting html - starts with hands at 9. This rotation has all 3 hands pointing at 12*/
+      transition: all 0.05s; /* This and transition-timing-function deal with how hand looks as it will move around the clock*/
+      transition-timing-function: cubic-bezier(0,3.19,.58,1);
     }
 
   </style>
 
   <script>
 
+    const secondHand = document.querySelector('.second-hand');
+    const minsHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+
+    const setDate = () => {
+      // console.log('Hi');
+      const now = new Date();
+
+      const seconds = now.getSeconds();
+      // console.log(seconds);
+      const secondDegrees = (((seconds/60)*360)+90);
+      secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+
+      const mins = now.getMinutes();
+      // console.log(mins);
+      const minDegrees = (((mins/60)*360)+90);
+      minsHand.style.transform = `rotate(${minDegrees}deg)`;
+
+      const hours = now.getHours();
+      // console.log(hours);
+      const hourDegrees = (((hours/12)*360)+90);
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+
+
+    }
+
+    // Want to run the function setDate every second => e.g. if console.log('Hi') was body of function - every 1 sec - printed to console
+    setInterval(setDate, 1000);
 
   </script>
 </body>
