--- a/04 - Array Cardio Day 1/index-CLASSWORKINGS.html
+++ b/04 - Array Cardio Day 1/index-CLASSWORKINGS.html
@@ -31,9 +31,15 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    // console.log(inventors);
+    const fifteen = inventors.filter(inventor => (inventor.year >=1500 && inventor.year < 1600));
+    // console.log(fifteen); => shows array of 2 objects that satisfy condition (1500's born)
+    console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const names = inventors.map(inventor => (`${inventor.first} ${inventor.last}`));
+    console.log(names);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
