--- a/04 - Array Cardio Day 1/index-CLASSWORKINGS.html
+++ b/04 - Array Cardio Day 1/index-CLASSWORKINGS.html
@@ -43,9 +43,22 @@
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const birthdate = inventors.sort((a,b) => a.year > b.year ? 1 : -1);
+    console.log(birthdate);
+
+    // Longer hand below - use of ternary operator (above)
+    // const birthdate = inventors.sort((firstPerson, secondPerson) => {
+    //   if (firstPerson.year > secondPerson.year) {
+    //     return 1;
+    //   } else {
+    //     return -1;
+    //   };
+    // });
+
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+
 
     // 5. Sort the inventors by years lived
 
