Exercises complete - notes needed

--- a/04 - Array Cardio Day 1/index-CLASSWORKINGS.html
+++ b/04 - Array Cardio Day 1/index-CLASSWORKINGS.html
@@ -70,7 +70,18 @@
     // 5. Sort the inventors by years lived
     // Note here oldest to youngest - therefore, descending order. Hence why return -1 if a > b. Compare with Ex 3.
     const oldest = inventors.sort((a,b) => ((a.passed - a.year) > (b.passed - b.year) ? -1 : 1));
+    console.table(oldest);
 
+    // Wes' method:
+    // const oldest = inventors.sort((a,b) => {
+    //   lastInventor = a.passed - a.year
+    //   nextInventor = b.passed - b.year
+    //   return lastInventor > nextInventor ? -1 : 1;
+    // })
+    // console.table(oldest);
+
+
+   // Longer hand below:
     // {
     //   if ((a.passed - a.year) > (b.passed - b.year)) {
     //     return 1;
@@ -79,21 +90,46 @@
     //   };
     // })
 
-    console.table(oldest);
-    // const ages = inventors.map(inventor => (inventor.passed - inventor.year)
 
-    // console.table(ages);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // Step 1 - inspect wiki page and find DOM element
 
+    // const category = document.querySelector('.mw-category');
+    // // Array.from => converts node list to array. Remember - much fewer methods can be applied to nodelist (.map and .filter cannot).
+    // // category.querySelector... => can call querySelector on any existing DOM element - to look inside DOM element
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const de = links
+    //                 // .map => to convert links to names
+    //                 .map(link => link.textContent)
+    //                 // .filter => to filter and those get only those street names/boulevards containing "de" in their name
+    //                 .filter(streetName => streetName.includes("de"));
+
+    // Applied both .map and .filter in succession - hence no ; after .map
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort((lastOne, nextOne) => {
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    })
+    console.log(alpha);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transportation = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {})
+
+    console.log(transportation);
 
   </script>
 </body>
