--- a/06 - Type Ahead/index-WORKINGS-1.html
+++ b/06 - Type Ahead/index-WORKINGS-1.html
@@ -17,6 +17,64 @@
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+const cities = [];
+
+fetch(endpoint)
+  .then(blob => blob.json())
+  .then(data => cities.push(...data))
+
+
+const findMatches = (wordToMatch, cities) => {
+  return cities.filter(place => {
+    // here we need to figure out if the city or state matches what was searched
+    const regex = new RegExp(wordToMatch, 'gi');
+    return place.city.match(regex) || place.state.match(regex)
+  });
+}
+
+numberWithCommas = (x) => {
+  return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+}
+
+function displayMatches() {
+  // console.log(this.value); => if type in "bos" - in console will see bos
+  const matchArray = findMatches(this.value,cities);
+  // console.log(matchArray);
+  const html = matchArray.map(place => {
+
+    //regex, cityName, stateName=> to highlight on search - i.e. search "bos" => suggestions return Boston & Bossier with the "bos" highlighted in yellow
+    const regex = new RegExp(this.value, 'gi')
+    // Note: class="hl" => see CSS
+    const cityName = place.city.replace(regex, `<span class = "hl">${this.value}</span>`)
+    // stateName - same principle as cityName
+    const stateName = place.state.replace(regex, `<span class = "hl">${this.value}</span>`)
+
+
+    return `
+    <li>
+      <span class ="name">${cityName}, ${stateName}</span>
+      <span class ="population">${numberWithCommas(place.population)}</span>
+    </li>
+    `;
+  }).join('');
+  suggestions.innerHTML = html;
+}
+
+// this doesn't work with ES6 - what is the alternative syntax??
+// const displayMatches = () => {
+//   console.log(this.value);
+// }
+
+const searchInput = document.querySelector('.search');
+const suggestions = document.querySelector('.suggestions');
+
+searchInput.addEventListener('change', displayMatches);
+searchInput.addEventListener('keyup', displayMatches);
+
+// fetch(url).then((response) => {
+  // Do something once HTTP response is received
+// });
+
 </script>
 </body>
 </html>
